Ajustando build e dependencias