@@ -1,17 +1,29 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.cortex</groupId>
 		<artifactId>connector</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>.</relativePath>
 	</parent>
+	<groupId>com.cortex</groupId>
 	<artifactId>cont2</artifactId>
+	<name>cont2</name>
+	<url>http://maven.apache.org</url>
 	<properties>
 		<java.version>10</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>com.cortex</groupId>
+			<artifactId>message-broker</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
@@ -30,22 +42,11 @@
 			<artifactId>spring-context</artifactId>
 			<version>5.1.0.BUILD-SNAPSHOT</version>
 		</dependency>
-		
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-activemq</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-broker</artifactId>
-        </dependency>
-        
-        
 		<dependency>
-			<groupId>com.cortex</groupId>
-			<artifactId>MessageBroker</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<profiles>
@@ -59,12 +60,16 @@
 			</properties>
 			<build>
 				<plugins>
+					
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>3.7.0</version>
 						<configuration>
 							<release>${java.version}</release>
+							<compilerArgs>
+								<arg>-verbose</arg>
+							</compilerArgs>
 						</configuration>
 						<dependencies>
 							<!-- JDK 10 fix -->
@@ -74,6 +79,78 @@
 								<version>6.1.1</version>
 							</dependency>
 						</dependencies>
+					</plugin>
+					<plugin>
+						<artifactId>maven-jar-plugin</artifactId>
+						<version>3.0.2</version>
+						<configuration>
+							<outputDirectory>${project.build.directory}/modules</outputDirectory>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<jvmArguments>--add-modules java.xml.bind</jvmArguments>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>build-info</goal>
+								</goals>
+								<configuration>
+									<additionalProperties>
+										<encoding.source>${project.build.sourceEncoding}
+										</encoding.source>
+										<encoding.reporting>${project.reporting.outputEncoding}
+										</encoding.reporting>
+										<java.source>${java.version}</java.source>
+										<java.target>${java.version}</java.target>
+									</additionalProperties>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<version>3.1.0</version>
+						<executions>
+							<execution>
+								<id>copy-dependencies</id>
+								<phase>package</phase>
+								<goals>
+									<goal>copy-dependencies</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${project.build.directory}/modules
+									</outputDirectory>
+									<includeScope>runtime</includeScope>
+									<excludeArtifactIds>
+										jboss-transaction-api_1.2_spec
+									</excludeArtifactIds>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-install-plugin</artifactId>
+						<version>2.3.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>install-file</goal>
+								</goals>
+								<phase>install</phase>
+								<configuration>
+									<file>${project.build.directory}/modules/${project.build.finalName}.${project.packaging}</file>
+									<generatePom>false</generatePom>
+									<pomFile>pom.xml</pomFile>
+									<version>${project.build.version}</version>
+								</configuration>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
